Fixed candidate directive alignement

--- a/scotty/static/components/employer-dashboard/employer-dashboard.less
+++ b/scotty/static/components/employer-dashboard/employer-dashboard.less
@@ -61,7 +61,7 @@
     .offer-list-item-small { border-bottom: 1px solid #696969; }
 
     hc-candidate {
-      header .name-no-link { display: block }
+      header .name-no-link { display: inline-block }
       .location.current { display: none }
       .location.target-position { display: block }
       .picture-container .name-no-link { display: none }
